# rust-bin

./: Cargo.toml
bin_literals/: Cargo.toml
bin_literals/src/: lib.rs
bin_literals_macros/: Cargo.toml
bin_literals_macros/src/: lib.rs
bin_tests/: Cargo.toml
bin_tests/tests/: literals.rs
src/: lib.rs  traits.rs
